Fix image scaling on Safari when using grid view (#1577)

--- a/themes/finna2/less/finna/grid-view.less
+++ b/themes/finna2/less/finna/grid-view.less
@@ -125,6 +125,7 @@
     .image-popup-trigger:not(.no-image) {
       max-height: 350px;
       display: flex;
+      flex-direction: column;
       align-items: center;
       justify-content: center;
       overflow: hidden;
